News module: split into separate dao impl